Started implementing decompression. - Added errorcode enum for easier error source identification. - Added FileDecompressor class.