@@ -3,27 +3,24 @@ package com.kurodev.filecompressor.compress;
 import com.kurodev.filecompressor.table.SymbolTable;
 import com.kurodev.filecompressor.table.TableFactory;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.function.Consumer;
 
 /**
  * @author kuro
  **/
-public class FileCompressor implements Runnable {
-    private static final String COMPRESSED_FILE_EXTENSION = ".cmp";
-    private final Path source;
-    private final Path dest;
-    private Consumer<Path> onDone;
+public class FileCompressor extends FileOperationHandler {
+    static final String COMPRESSED_FILE_EXTENSION = ".cmp";
 
     /**
      * @param source the source file to compress.
      */
     public FileCompressor(Path source) {
-        this(source, autogenDestFile(source));
+        super(source, autogenDestFile(source));
     }
 
     /**
@@ -31,9 +28,7 @@ public class FileCompressor implements Runnable {
      * @param dest   the destination file to generate
      */
     public FileCompressor(Path source, Path dest) {
-
-        this.source = source;
-        this.dest = dest;
+        super(source, dest);
     }
 
     private static Path autogenDestFile(Path source) {
@@ -43,47 +38,16 @@ public class FileCompressor implements Runnable {
         return Paths.get(parent.toString() + "/" + fileName + COMPRESSED_FILE_EXTENSION);
     }
 
-    public Path getDestFile() {
-        return dest;
-    }
-
-    private void checkCompressibility() {
-        if (!Files.isRegularFile(source))
-            fail("Must be a file");
-        if (!Files.isReadable(source))
-            fail("Cannot read file");
-    }
-
-    //TODO serialize SymbolTable to bytecode to write to file.
     @Override
-    public void run() {
-        try {
-            checkCompressibility();
-            final String content = Files.readString(source);
-            final SymbolTable table = TableFactory.create(content);
-            byte[] bytes = table.encode(content);
-            Files.write(dest, bytes, StandardOpenOption.WRITE);
-            if (onDone != null) {
-                onDone.accept(dest);
-            }
-        } catch (IOException e) {
-            fail(e);
+    protected void work() throws IOException {
+        final String content = Files.readString(source);
+        final SymbolTable table = TableFactory.create(content);
+        ByteArrayOutputStream output = new ByteArrayOutputStream();
+        output.write(table.getTable());
+        output.write(table.encode(content));
+        if (!Files.exists(dest)) {
+            Files.createFile(dest);
         }
-    }
-
-    private void fail(String reason) {
-        throw new CompressionException(reason);
-    }
-
-    private void fail(IOException e) {
-        throw new CompressionException(e);
-    }
-
-    /**
-     * Sets a consumer to be notified once the operation has been successfully executed.
-     * The consumer will NOT be notified if the operation fails, as this will result in a RuntimeException.
-     */
-    public void setOnDone(Consumer<Path> onDone) {
-        this.onDone = onDone;
+        Files.write(dest, output.toByteArray(), StandardOpenOption.WRITE);
     }
 }
